fix(android): replace String.isBlank for API 24 compatibility